tests/samples/invalid/missing_address.pn
fn foo(x: &u8) -> u8
{
	return: x
}

fn main() -> u8
{
	var x: u8 = 10;
	var y = foo(x);
	return: y
}
